Use Collections instead of List.of, Remove usages of deprecated FileManager.readFile